fix: no gap

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 * {
     align-items: center;
-    gap: 15;
 }
 
 green {
